<resources>
    <string name="app_name">Да! Хочу!</string>
    <string name="basket">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="rating">Рейтинг</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_cart">Корзина</string>
    <string name="menu">Меню</string>
    <string name="order">Заказ:</string>
    <string name="delivery">Доставка</string>
    <string name="total">Итого</string>
    <string name="delivery_address">Адрес доставки:</string>
    <string name="payment">Оплата</string>
    <string name="use_your_address">Введите ваш адрес</string>
    <string name="order_snack_please_login_text">Для заказа необходимо авторизоваться</string>
    <string name="order_snacl_login_action">Войти</string>
    <string name="alread_logged_in">Вы уже вошли</string>
    <string name="no_internet">Нет интернета</string>
    <string name="save">Сохранить</string>
    <string name="login">Войти</string>
    <string name="default_error">Произошла ошибка</string>
    <string name="edit_profile_success">Данные успешно сохранены</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_rating_placeholder">Ваше место в рейтинге: \n   За всё время: %s \n   За месяц: %s\nВаш рейтинг: %s</string>
    <string name="rating_my_team_button_text">Моя команда</string>
    <string name="fill_personal_data">Заполните профиль</string>
    <string name="orders">Заказы</string>
    <string name="rating_month">Рейтинг за месяц</string>
</resources>
