<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CartActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:weightSum="20">

    <TextView
        android:id="@+id/tv_Order"
        android:layout_width="69dp"
        android:layout_height="26dp"
        android:layout_marginTop="60dp"
        android:text="@string/order"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        android:layout_weight="1"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Order"/>

    <ListView
        android:id="@+id/listview_food"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_weight="4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/delivery"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listview_food"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/deliveryPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="200 \u20BD"
            android:textAlignment="gravity"
            android:textSize="17sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/cfPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="5000 Р"
            android:textSize="17dp" />

    </LinearLayout>





    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:textSize="20dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/delivery_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top|start"
            android:hint="@string/use_your_address"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="20dp"
        android:layout_weight="1"/>

    <Spinner
        android:layout_marginTop="5dp"
        android:id="@+id/payment_spinner"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@drawable/layout_bg"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/order"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/rounded_button"
        android:text="Заказать"
        android:textColor="@color/colorItemname"
        android:textSize="18dp"
        android:layout_weight="1"/>

</LinearLayout>